crates/descar-core/tests/snapshots/source_span_snapshots__absolute_path_unix.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: truncated
---
../src/main.vn
