crates/descar-core/tests/snapshots/source_span_snapshots__different_lines_unix.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: span.to_string()
---
../module/file.vn:line 2:column 1-line 4:column 5
