crates/descar-core/tests/snapshots/source_span_snapshots__extraction_and_errors.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: rendered
---
reversed=EndBeforeStart { start_offset: 8, end_offset: 3 }
reversed_display=end offset (3) must not precede start offset (8)
valid_extract=Ok("€")
invalid_boundary=Err(OffsetOutOfRange(4))
out_of_range=Err(OffsetOutOfRange(99))
