crates/descar-core/tests/snapshots/source_span_snapshots__merge_different_files_no_change.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: merged
---
SourceSpan {
    file_path: "file1.vn",
    start: SourceLocation {
        line: 1,
        column: 1,
        offset: 0,
        index: 0,
        utf8_offset: 18446744073709551615,
        code_point_offset: 18446744073709551615,
    },
    end: SourceLocation {
        line: 2,
        column: 2,
        offset: 1,
        index: 1,
        utf8_offset: 18446744073709551615,
        code_point_offset: 18446744073709551615,
    },
}
