crates/descar-core/tests/snapshots/source_span_snapshots__merge_same_file_expands_span.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: merged
---
SourceSpan {
    file_path: "file.vn",
    start: SourceLocation {
        line: 2,
        column: 3,
        offset: 0,
        index: 0,
        utf8_offset: 18446744073709551615,
        code_point_offset: 18446744073709551615,
    },
    end: SourceLocation {
        line: 5,
        column: 10,
        offset: 1,
        index: 1,
        utf8_offset: 18446744073709551615,
        code_point_offset: 18446744073709551615,
    },
}
