crates/descar-core/tests/snapshots/source_span_snapshots__minimal_coordinates_unix.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: span.to_string()
---
f.vn:line 0:column 0-line 0:column 0
