crates/descar-core/tests/snapshots/source_span_snapshots__representations.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: rendered
---
point=SourceSpan { file_path: "asd/dd.dr", start: SourceLocation { line: 2, column: 3, offset: 7, index: 0, utf8_offset: 18446744073709551615, code_point_offset: 18446744073709551615 }, end: SourceLocation { line: 2, column: 3, offset: 7, index: 0, utf8_offset: 18446744073709551615, code_point_offset: 18446744073709551615 } }
point_display=asd\dd.dr:line 2:column 3
point_length=0
regular=SourceSpan { file_path: "asd/dd.dr", start: SourceLocation { line: 1, column: 1, offset: 0, index: 0, utf8_offset: 18446744073709551615, code_point_offset: 18446744073709551615 }, end: SourceLocation { line: 2, column: 4, offset: 5, index: 0, utf8_offset: 18446744073709551615, code_point_offset: 18446744073709551615 } }
regular_display=asd\dd.dr:line 1:column 1-line 2:column 4
regular_length=5
regular_multiline=true
merged=SourceSpan { file_path: "asd/dd.dr", start: SourceLocation { line: 1, column: 1, offset: 0, index: 0, utf8_offset: 18446744073709551615, code_point_offset: 18446744073709551615 }, end: SourceLocation { line: 2, column: 4, offset: 5, index: 0, utf8_offset: 18446744073709551615, code_point_offset: 18446744073709551615 } }
