crates/descar-core/tests/snapshots/source_span_snapshots__same_line_unix.snap
---
source: crates/descar-core/tests/source_span_snapshots.rs
expression: span.to_string()
---
../src/main.vn:line 5:column 3-line 5:column 10
